# workout-logger

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  compose.yaml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
alembic/: env.py
alembic/versions/: 93469c1ebbbf_initial_schema.py
app/: config.py  database.py  exceptions.py  logging_config.py  main.py  security.py
app/api/v1/: logs.py  plans.py  router.py
app/models/: __init__.py  base.py  exercise_log.py  plan_exercise.py  workout_log.py  workout_plan.py
app/schemas/: common.py  logs.py  plans.py
app/services/: logs.py  plans.py
app/static/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
frontend/: input.css
scripts/: backup_database.py  entrypoint.sh  generate_icons.py
tests/: conftest.py  test_backup.py  test_config.py  test_health.py  test_logging.py  test_logs.py  test_migrations.py  test_models.py  test_openapi.py  test_plans.py  test_security.py  test_static_pwa.py  test_type_decorators.py  test_validation.py
